--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-  "token":"NjYxMjc4Njk0NTg4ODA5MjI2.Xh0mYw.Qrs8lzf5BpFkyOlL5FJqsb7s2yM",
+  "token":"NjYxMjc4Njk0NTg4ODA5MjI2.XkJT6A.Kd8ASXc_3Zmmjcmh5R5S4iA3MDE",
   "prefix":"!",
   "owner":"232466273479426049",
   "version":"0.0.3 - Alpha Stage",
-  "DevVersion":"A:00-0227",
+  "DevVersion":"A:00-0228",
   "Stage":"Alpha"
 }
